Added requests package for Notion OAuth

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,28 @@
+anyio==4.9.0
+asgiref==3.8.1
+beautifulsoup4==4.13.4
+bs4==0.0.2
+cached-property==2.0.1
+certifi==2025.4.26
+charset-normalizer==3.4.2
+commonmark==0.9.1
+dictdiffer==0.9.0
 Django>=5.2
+gunicorn
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+notion==0.0.28
 notion-client>=2.2.1
 PyMuPDF>=1.23.22
-gunicorn
 python-decouple
+python-slugify==8.0.4
+requests==2.32.3
+sniffio==1.3.1
+soupsieve==2.7
+sqlparse==0.5.3
+text-unidecode==1.3
+typing_extensions==4.13.2
+tzlocal==5.3.1
+urllib3==2.4.0
