--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,15 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 commonmark==0.9.1
 dictdiffer==0.9.0
-Django>=5.2
-gunicorn
+Django==5.2.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 notion==0.0.28
-notion-client>=2.2.1
-PyMuPDF>=1.23.22
-python-decouple
+notion-client==2.3.0
+PyMuPDF==1.26.0
+python-decouple==3.8
 python-slugify==8.0.4
 requests==2.32.3
 sniffio==1.3.1
@@ -26,3 +25,4 @@ text-unidecode==1.3
 typing_extensions==4.13.2
 tzlocal==5.3.1
 urllib3==2.4.0
+whitenoise==6.9.0
