--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ charset-normalizer==3.4.2
 commonmark==0.9.1
 dictdiffer==0.9.0
 Django==5.2.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 notion==0.0.28
 notion-client==2.3.0
+packaging==25.0
 PyMuPDF==1.26.0
 python-decouple==3.8
 python-slugify==8.0.4
