--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,8 @@ typing_extensions==4.13.2
 tzlocal==5.3.1
 urllib3==2.4.0
 whitenoise==6.9.0
+opencv-python-headless==4.9.0.80
+pdf2image==1.17.0
+pytesseract==0.3.10
+textblob==0.18.0
+
