--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bs4==0.0.2
 cached-property==2.0.1
 certifi==2025.4.26
 charset-normalizer==3.4.2
+click==8.2.1
 commonmark==0.9.1
 dictdiffer==0.9.0
 Django==5.2.1
@@ -13,23 +14,28 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+joblib==1.5.1
+nltk==3.9.1
 notion==0.0.28
 notion-client==2.3.0
+numpy==2.3.0
+opencv-python==4.11.0.86
 packaging==25.0
+pdf2image==1.17.0
+pillow==11.2.1
 PyMuPDF==1.26.0
+pytesseract==0.3.13
 python-decouple==3.8
 python-slugify==8.0.4
+regex==2024.11.6
 requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.7
 sqlparse==0.5.3
 text-unidecode==1.3
+textblob==0.19.0
+tqdm==4.67.1
 typing_extensions==4.13.2
 tzlocal==5.3.1
 urllib3==2.4.0
 whitenoise==6.9.0
-opencv-python-headless==4.9.0.80
-pdf2image==1.17.0
-pytesseract==0.3.10
-textblob==0.18.0
-
