--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,19 @@ asgiref==3.8.1
 beautifulsoup4==4.13.4
 bs4==0.0.2
 cached-property==2.0.1
+cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
 commonmark==0.9.1
 dictdiffer==0.9.0
 Django==5.2.1
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-vision==3.10.2
+googleapis-common-protos==1.70.0
+grpcio==1.73.1
+grpcio-status==1.73.1
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
@@ -23,12 +30,17 @@ opencv-python==4.11.0.86
 packaging==25.0
 pdf2image==1.17.0
 pillow==11.2.1
+proto-plus==1.26.1
+protobuf==6.31.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 PyMuPDF==1.26.0
 pytesseract==0.3.13
 python-decouple==3.8
 python-slugify==8.0.4
 regex==2024.11.6
 requests==2.32.3
+rsa==4.9.1
 sniffio==1.3.1
 soupsieve==2.7
 sqlparse==0.5.3
@@ -39,4 +51,3 @@ typing_extensions==4.13.2
 tzlocal==5.3.1
 urllib3==2.4.0
 whitenoise==6.9.0
-google-cloud-vision
